# shieldflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ai-agent-welcome.yml  ci.yml  keeper-pr-summary.yml  keeper-stale.yml  keeper-triage.yml  keeper-weekly-digest.yml  release.yml
benchmarks/: test_benchmarks.py
docs/: INCIDENT_RESPONSE.md  THREAT_MODEL.md
docs/adr/: adr-001-proxy-architecture.md  adr-002-trust-model.md
docs/api/: REFERENCE.md
docs/architecture/: MCP-TRUST-POLICY.md  SYSTEM_OVERVIEW.md  THREAT_MODEL.md  TRUST_MODEL.md
docs/deployment/: SECURITY-BASELINE.md
docs/guides/: maintainers.md  openclaw.md  quickstart.md
docs/images/: README.md
docs/ops/: AGENTIC-LOOP.md  AUTONOMY-LOG.md  grafana-dashboard.json  state.json
docs/reference/: audit-schema.md  metrics.md
docs/research/: auto-upstream-detect.md
examples/: basic_usage.py  email_agent.py  multi_tenant.yaml  multi_tenant_demo.py  proxy_quickstart.py  shieldflow.yaml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  mockData.ts  types.ts
scripts/: post_tweet.py
src/shieldflow/: __init__.py  cli.py  exceptions.py  logging_utils.py  shieldflow.py
tests/integration/: test_cli.py  test_proxy.py
tests/red-team/: test_data_exfiltration.py  test_direct_injection.py  test_encoded_injection.py  test_trust_escalation.py
tests/unit/: test_anomaly.py  test_audit_schema.py  test_cli.py  test_context_coverage.py  test_dashboard.py  test_dlp_classifier.py  test_guardrails.py  test_health.py  test_mcp_trust.py  test_metrics.py  test_openclaw_detection.py  test_policy.py  test_proxy.py  test_ratelimit.py  test_sanitiser_properties.py  test_session.py  (+6 more)
venv-twitter/: pyvenv.cfg
(+18 files in other folders)
